--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,39 @@
-<h1>
-    Hello
-</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>House Feature Input</title>
+</head>
+<body>
+  <h2>Enter House Features</h2>
+
+  <form action="{{ url_for('predict_api') }}" method="POST">
+    <label>MedInc:</label><br>
+    <input type="number" step="0.1" name="MedInc" required><br><br>
+
+    <label>HouseAge:</label><br>
+    <input type="number" name="HouseAge" required><br><br>
+
+    <label>AveRooms:</label><br>
+    <input type="number" step="0.1" name="AveRooms" required><br><br>
+
+    <label>AveBedrms:</label><br>
+    <input type="number" step="0.1" name="AveBedrms" required><br><br>
+    
+    <label>Population:</label><br>
+    <input type="number" step="0.1" name="Population" required><br><br>
+    
+    <label>AveOccup:</label><br>
+    <input type="number" step="0.1" name="AveOccup" required><br><br>
+
+    <label>Latitude:</label><br>
+    <input type="number" step="0.1" name="Latitude" required><br><br>
+
+    <label>Longitude:</label><br>
+    <input type="number" step="0.1" name="Longitude" required><br><br>
+
+    <button type="submit">Submit</button>
+  </form>
+
+<h3>Prediction: {{ prediction }}</h3>
+</body>
+</html>
