--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,8 @@
 <body>
   <h2>Enter House Features</h2>
 
-  <form action="{{ url_for('predict_api') }}" method="POST">
+  <form action="{{ url_for('predict') }}" method="POST">
+    
     <label>MedInc:</label><br>
     <input type="number" step="0.1" name="MedInc" required><br><br>
 
